<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dutic2.ui.cursos.CursosFragment"
        android:label="@string/menu_cursos"
        tools:layout="@layout/fragment_cursos">
        <action
            android:id="@+id/action_nav_home_to_nav_share"
            app:destination="@id/nav_configuraciones" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_promedio" />
        <action
            android:id="@+id/action_nav_home_to_nav_send"
            app:destination="@id/nav_notas_de_voz" />
        <action
            android:id="@+id/action_nav_home_to_nav_archivos"
            app:destination="@id/nav_archivos" />
        <action
            android:id="@+id/action_nav_home_to_cursoDetallesFragment"
            app:destination="@id/nav_cursoDetallesFragment" />
        <action
            android:id="@+id/action_nav_home_to_example3Fragment"
            app:destination="@id/nav_calendario2" />
        <action
            android:id="@+id/action_nav_home_to_nav_plantilla"
            app:destination="@id/nav_plantilla" />
    </fragment>

    <fragment
        android:id="@+id/nav_promedio"
        android:name="com.example.dutic2.ui.promedio.PromediosFragment"
        android:label="@string/menu_promedios"
        tools:layout="@layout/fragment_promedio" >
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
    </fragment>

    <fragment
        android:id="@+id/nav_configuraciones"
        android:name="com.example.dutic2.ui.configuraciones.ConfiguracionesFragment"
        android:label="@string/menu_configuraciones"
        tools:layout="@layout/fragment_configuraciones" />

    <fragment
        android:id="@+id/nav_notas_de_voz"
        android:name="com.example.dutic2.ui.notasDeVoz.NotasDeVozFragment"
        android:label="@string/menu_notas_de_voz"
        tools:layout="@layout/fragment_notas_de_voz" >
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
    </fragment>
    <fragment
        android:id="@+id/nav_archivos"
        android:name="com.example.dutic2.ui.archivos.ArchivosFragment"
        android:label="@string/menu_archivos"
        tools:layout="@layout/archivos_fragment" >
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
    </fragment>
    <fragment
        android:id="@+id/nav_cursoDetallesFragment"
        android:name="com.example.dutic2.ui.cursoDetalles.CursoDetallesFragment"
        android:label=""
        tools:layout="@layout/curso_detalles_fragment">
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
        <action
            android:id="@+id/action_nav_cursoDetallesFragment_to_nav_publicaciones"
            app:destination="@id/nav_publicaciones" />
        <action
            android:id="@+id/action_nav_cursoDetallesFragment_to_nav_cursoFotos"
            app:destination="@id/nav_cursoFotos" />
        <action
            android:id="@+id/action_nav_cursoDetallesFragment_to_nav_calendario2"
            app:destination="@id/nav_calendario2" />
    </fragment>
    <fragment
        android:id="@+id/nav_calendario2"
        android:name="com.example.dutic2.ui.calendario.Calendario2Fragment"
        android:label=""
        tools:layout="@layout/calendario2_fragment" >
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
    </fragment>
    <fragment
        android:id="@+id/nav_cursoFotos"
        android:name="com.example.dutic2.ui.cursoFotos.CursoFotosFragment"
        android:label=""
        tools:layout="@layout/curso_fotos_fragment" >
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
    </fragment>
    <fragment
        android:id="@+id/nav_publicaciones"
        android:name="com.example.dutic2.ui.publicaciones.PublicacionesFragment"
        android:label=""
        tools:layout="@layout/fragment_publicaciones">
        <argument
            android:name="curso"
            app:argType="com.example.dutic2.models.Curso" />
        <action
            android:id="@+id/action_nav_publicaciones_to_detallePublicacionFragment"
            app:destination="@id/nav_detallePublicacion" />
    </fragment>
    <fragment
        android:id="@+id/nav_detallePublicacion"
        android:name="com.example.dutic2.ui.publicaciones.DetallePublicacionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_detalle_publicacion" >
        <argument
            android:name="publicacion"
            app:argType="com.example.dutic2.models.Publicacion" />
    </fragment>
    <fragment
        android:id="@+id/nav_plantilla"
        android:name="com.example.dutic2.ui.plantillaCursos.PlantillaCursosFragment"
        android:label=""
        tools:layout="@layout/plantilla_cursos_fragment" >
        <argument
            android:name="cursos"
            app:argType="com.example.dutic2.models.Curso[]" />
        <argument
            android:name="flag"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_promediosGeneral"
        android:name="com.example.dutic2.ui.promedio.PromediosGeneralFragment"
        android:label=""
        tools:layout="@layout/fragment_promedios_general" >
        <argument
            android:name="cursos"
            app:argType="com.example.dutic2.models.Curso[]" />
    </fragment>
</navigation>